fix(checkbox & radio): Fix white space for inline elements in label - FRONT-3190

--- a/src/implementations/vanilla/components/radio/_radio.scss
+++ b/src/implementations/vanilla/components/radio/_radio.scss
@@ -52,6 +52,7 @@ $_outline-color: null !default;
   color: $_label-color;
   display: inline-flex;
   font: map.get(theme.$font-prolonged, 'm');
+  white-space: pre;
 }
 
 .ecl-radio--disabled .ecl-radio__label {
